--- a/frontend/src/app/modules/auth/employer-auth/employer-login/employer-login.component.html
+++ b/frontend/src/app/modules/auth/employer-auth/employer-login/employer-login.component.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-7 px-5">
-        <h5 class="text-muted font-weight-bold">Find the Employees</h5>
-        <h1 class="text-secondary">Hire Your Next Candidate On Eazy Recruitz</h1>
+        <h5 class="text-muted font-weight-bold">{{"auth.employeeTitle" | translate }} </h5>
+        <h1 class="text-secondary">{{"auth.employeeSubTitle" | translate }} </h1>
         <img src="assets/images/recruiter-img.png" class="img-fluid mx-auto mt-4 px-4"/>
       </div>
       <div class="col-md-5">
@@ -20,7 +20,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center my-3">
-        <h1>Hiring is now simple</h1>
+        <h1>{{"auth.employeeHeadContent" | translate }} </h1>
       </div>
     </div>
     <div class="row my-5">
