--- a/frontend/src/app/modules/auth/user-auth/user-login/user-login.component.html
+++ b/frontend/src/app/modules/auth/user-auth/user-login/user-login.component.html
@@ -3,8 +3,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-7 px-5">
-        <h5 class="text-muted font-weight-bold">Find Your Right Place</h5>
-        <h1 class="text-secondary">Explore Your Career Path With Eazy Recruitz</h1>
+        <h5 class="text-muted font-weight-bold">{{"auth.findRightPlace" | translate }}</h5>
+        <h1 class="text-secondary">{{"auth.loginTitle" | translate }}</h1>
         <img [src]="'assets/images/jobseeker-img.png'" class="img-fluid mx-auto mt-4 px-4"/>
       </div>
       <div class="col-md-5">
