--- a/admin/src/app/pages/skills/skills.component.html
+++ b/admin/src/app/pages/skills/skills.component.html
@@ -21,136 +21,53 @@
 								<div class="row">
 									<div class="offset-lg-2 col-lg-8">
 										<!-- Alert start -->
-										<div class="alert alert-success alert-dismissible fade show" role="alert" style="display: none;">
+										<div *ngIf="show" class="alert alert-success alert-dismissible fade show" role="alert" >
 										  <strong>Successfully !</strong> Added New SAP Skill
 										  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-											<span aria-hidden="true">×</span>
+											<span aria-hidden="true" (click)="close()">×</span>
 										  </button>
 										</div>	
 									</div>	
 								</div>	
 								<!-- Alert end -->
 								<!-- Form start -->
-								<form class="myadmin-form mt-4">
+								<form [formGroup]="addskills" class="myadmin-form mt-4" (ngSubmit)="submit()" autocomplete="off">
 									<div class="row">
 										<div class="form-group offset-lg-2 col-lg-4">
 											<label>Skill Name</label>
-											<input type="text" class="form-control" placeholder="Ex: SAP Finance Accounting Controlling">
+											<input type="text" class="form-control" name="long_tag" formControlName="long_tag" placeholder="Ex: SAP Finance Accounting Controlling">
+											<div *ngIf="submitted && f.long_tag.errors">
+												<span class="warning" *ngIf="f.long_tag.errors.required">Field is Required</span>
+											</div>
 										</div>	
 										<div class="form-group  col-lg-2">
 											<label>Skill Code</label>
-											<input type="text" class="form-control" placeholder="Ex: SAP FICO">
+											<input type="text" class="form-control" name="tag" formControlName="tag" placeholder="Ex: SAP FICO">
+											<div *ngIf="submitted && f.tag.errors">
+												<span class="warning" *ngIf="f.tag.errors.required">Field is Required</span>
+											</div>
 										</div>									
 										<div class="form-group col-lg-2">
 											<label>&nbsp;</label>										
-											<button type="button" class="btn mybtn btn-blue btn-block" id="addSkill" href="javascript:;">Add Skill</button>
+											<input type="submit" class="btn mybtn btn-blue btn-block" id="addSkill"  value="Add Skill">
 										</div>
 									</div>
 								</form>								
 								<!-- Form end -->
 								<!---->
 								<!-- Table start -->
+							  
 								<div class="row">
 									<div class="offset-lg-2 col-lg-8">
 										<div class="table-container">
 											<div class="table-responsive">
-												<div id="DataTables_Table_0_wrapper" class="dataTables_wrapper dt-bootstrap4 no-footer"><div class="top"></div><table class="sort-table table custom-table m-0 dataTable no-footer" id="DataTables_Table_0" role="grid">
+												<div id="DataTables_Table_0_wrapper" class="dataTables_wrapper dt-bootstrap4 no-footer"><div class="top"></div><table datatable [dtOptions]="dtOption" class="sort-table table custom-table m-0 dataTable no-footer" id="DataTables_Table_0" role="grid">
 													<thead>
 														<tr role="row"><th class="sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Skill Code: activate to sort column ascending" style="width: 147.125px;">Skill Code</th><th class="sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Skill Name: activate to sort column ascending" style="width: 339.609px;">Skill Name</th><th class="text-center sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Action: activate to sort column ascending" style="width: 71.2656px;">Action</th></tr>
 													</thead>
 													<tbody>
-														
-														
-														
-														
-														
-														
-														
-														
-														
-														
-														
-														
-														
-														
-														
-														
-														
-														
-														
-														
-													<tr role="row" class="odd">
-															<td>SAP FICO</td>
-															<td>SAP Finance Accounting controlling</td>
-															<td class="text-center">
-																<a href="#" class="btn btn-outline-primary btn-xs mr-2"><i class="ri-pencil-fill"></i></a>
-																<a href="#" class="btn btn-outline-danger btn-xs"><i class="ri-delete-bin-fill"></i></a>
-															</td>
-														</tr><tr role="row" class="even">
-															<td>SAP IM</td>
-															<td>SAP investment Management</td>
-															<td class="text-center">
-																<a href="#" class="btn btn-outline-primary btn-xs mr-2"><i class="ri-pencil-fill"></i></a>
-																<a href="#" class="btn btn-outline-danger btn-xs"><i class="ri-delete-bin-fill"></i></a>
-															</td>
-														</tr><tr role="row" class="odd">
-															<td>SAP TR</td>
-															<td>SAP Treasury</td>
-															<td class="text-center">
-																<a href="#" class="btn btn-outline-primary btn-xs mr-2"><i class="ri-pencil-fill"></i></a>
-																<a href="#" class="btn btn-outline-danger btn-xs"><i class="ri-delete-bin-fill"></i></a>
-															</td>
-														</tr><tr role="row" class="even">
-															<td>SAP EC</td>
-															<td>SAP Enterprise Control</td>
-															<td class="text-center">
-																<a href="#" class="btn btn-outline-primary btn-xs mr-2"><i class="ri-pencil-fill"></i></a>
-																<a href="#" class="btn btn-outline-danger btn-xs"><i class="ri-delete-bin-fill"></i></a>
-															</td>
-														</tr><tr role="row" class="odd">
-															<td>SAP MM</td>
-															<td>SAP Material Management</td>
-															<td class="text-center">
-																<a href="#" class="btn btn-outline-primary btn-xs mr-2"><i class="ri-pencil-fill"></i></a>
-																<a href="#" class="btn btn-outline-danger btn-xs"><i class="ri-delete-bin-fill"></i></a>
-															</td>
-														</tr><tr role="row" class="even">
-															<td>SAP SD </td>
-															<td>SAP Sales Distribution</td>
-															<td class="text-center">
-																<a href="#" class="btn btn-outline-primary btn-xs mr-2"><i class="ri-pencil-fill"></i></a>
-																<a href="#" class="btn btn-outline-danger btn-xs"><i class="ri-delete-bin-fill"></i></a>
-															</td>
-														</tr><tr role="row" class="odd">
-															<td>SAP PP  </td>
-															<td>SAP SAP Production Planning</td>
-															<td class="text-center">
-																<a href="#" class="btn btn-outline-primary btn-xs mr-2"><i class="ri-pencil-fill"></i></a>
-																<a href="#" class="btn btn-outline-danger btn-xs"><i class="ri-delete-bin-fill"></i></a>
-															</td>
-														</tr><tr role="row" class="even">
-															<td>SAP QM  </td>
-															<td>SAP Quality management</td>
-															<td class="text-center">
-																<a href="#" class="btn btn-outline-primary btn-xs mr-2"><i class="ri-pencil-fill"></i></a>
-																<a href="#" class="btn btn-outline-danger btn-xs"><i class="ri-delete-bin-fill"></i></a>
-															</td>
-														</tr><tr role="row" class="odd">
-															<td>SAP PM </td>
-															<td>SAP plant maintenance</td>
-															<td class="text-center">
-																<a href="#" class="btn btn-outline-primary btn-xs mr-2"><i class="ri-pencil-fill"></i></a>
-																<a href="#" class="btn btn-outline-danger btn-xs"><i class="ri-delete-bin-fill"></i></a>
-															</td>
-														</tr><tr role="row" class="even">
-															<td>SAP SM </td>
-															<td>SAP Strategy Management</td>
-															<td class="text-center">
-																<a href="#" class="btn btn-outline-primary btn-xs mr-2"><i class="ri-pencil-fill"></i></a>
-																<a href="#" class="btn btn-outline-danger btn-xs"><i class="ri-delete-bin-fill"></i></a>
-															</td>
-														</tr></tbody>
-												</table><div class="bottom"><div class="dataTables_length" id="DataTables_Table_0_length"><label>Show <select name="DataTables_Table_0_length" aria-controls="DataTables_Table_0" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label></div><div class="dataTables_paginate paging_simple_numbers" id="DataTables_Table_0_paginate"><ul class="pagination"><li class="paginate_button page-item previous disabled" id="DataTables_Table_0_previous"><a href="#" aria-controls="DataTables_Table_0" data-dt-idx="0" tabindex="0" class="page-link">Previous</a></li><li class="paginate_button page-item active"><a href="#" aria-controls="DataTables_Table_0" data-dt-idx="1" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item "><a href="#" aria-controls="DataTables_Table_0" data-dt-idx="2" tabindex="0" class="page-link">2</a></li><li class="paginate_button page-item next" id="DataTables_Table_0_next"><a href="#" aria-controls="DataTables_Table_0" data-dt-idx="3" tabindex="0" class="page-link">Next</a></li></ul></div></div><div class="clear"></div></div>
+													</tbody>
+												</table>
 											</div>
 										</div>
 									</div>
