--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
@@ -3,7 +3,7 @@
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
 				<label>{{"shared.jobTitle" | translate}}</label>
-				<input appMarkAsterisk formControlName="title" type="text" class="form-control text-capitalize" [placeholder]="'postJob.jobTitle' | translate"/>
+				<input appMarkAsterisk formControlName="title" type="text" class="form-control text-capitalize" [placeholder]="'shared.jobTitle' | translate"/>
 			</div>
 			<app-control-messages [control]="f['title']"></app-control-messages>
 		</div>
@@ -73,14 +73,14 @@
 				<label>{{"shared.city" | translate}}</label>
 				<input autocomplete="disabled" appMarkAsterisk ngx-google-places-autocomplete
 				(onAddressChange)="handleAddressChange($event)"
-				formControlName="city" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.city' | translate">
+				formControlName="city" type="text" class="form-control text-capitalize" [placeholder]="'shared.city' | translate">
 			</div>
 			<app-control-messages [control]="f['city']"></app-control-messages>
 		</div>
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
 				<label>{{"shared.state" | translate}}</label>
-				<input  autocomplete="disabled"  appMarkAsterisk formControlName="state" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.state' | translate">
+				<input  autocomplete="disabled"  appMarkAsterisk formControlName="state" type="text" class="form-control text-capitalize" [placeholder]="'shared.state' | translate">
 				<app-control-messages [control]="f['state']"></app-control-messages>
 			</div>
 		</div>
@@ -89,14 +89,14 @@
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
 				<label>{{"shared.zipCode" | translate}}</label>
-				<input autocomplete="disabled" appMarkAsterisk  OnlyNumber="true" formControlName="zipcode" type="text" class="form-control" [placeholder]="'postYourResume.zipCode' | translate">
+				<input autocomplete="disabled" appMarkAsterisk  OnlyNumber="true" formControlName="zipcode" type="text" class="form-control" [placeholder]="'shared.zipCode' | translate">
 			</div>
 			<app-control-messages [control]="f['zipcode']"></app-control-messages>
 		</div>
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
 				<label>{{"shared.country" | translate}}</label>
-				<input  autocomplete="disabled"  appMarkAsterisk formControlName="country" type="text" class="form-control text-uppercase" [placeholder]="'postYourResume.country' | translate">
+				<input  autocomplete="disabled"  appMarkAsterisk formControlName="country" type="text" class="form-control text-uppercase" [placeholder]="'shared.country' | translate">
 			</div>
 			<app-control-messages [control]="f['country']"></app-control-messages>
 		</div>
@@ -149,7 +149,7 @@
 		<div class="col-md-12">
 			<div class="form-group">
 				<label>{{"shared.description" | translate}}</label>
-				<angular-editor appMarkAsterisk formControlName="description" [config]="editorConfig" [placeholder]="'postJob.jobDescription' | translate"></angular-editor>
+				<angular-editor appMarkAsterisk formControlName="description" [config]="editorConfig" [placeholder]="'shared.description' | translate"></angular-editor>
 			</div>
 			<app-control-messages [control]="f['description']"></app-control-messages>
 		</div>
