--- a/frontend/src/app/shared/component/login-form/login-form.component.html
+++ b/frontend/src/app/shared/component/login-form/login-form.component.html
@@ -1,8 +1,8 @@
 
 <form class="login-form"  [formGroup]="loginForm" (ngSubmit)="login()">
-  <h1>Login</h1>
+  <h1>{{"auth.login" | translate }}</h1>
   <div class="form-group">
-    <label>Email</label>
+    <label>{{"auth.email" | translate }}</label>
     <div class="input-with-icon">
       <input type="email" class="form-control" [placeholder]="'Email'" formControlName="username"/>
       <i class="fas fa-user-alt"></i>
@@ -10,7 +10,7 @@
     <app-control-messages [control]="f['username']"></app-control-messages>
   </div>
   <div class="form-group">
-    <label>Password</label>
+    <label>{{"auth.password" | translate }}</label>
     <div class="input-with-icon input-group">
       <input appPassword type="password" class="form-control" [placeholder]="'Password'" formControlName="password">
       <i class="fas fa-lock"></i>
@@ -21,11 +21,11 @@
   <div class="login-controls form-group">
     <div class="custom-control custom-checkbox">
     <input type="checkbox" class="custom-control-input" id="rememberMe">
-    <label class="custom-control-label" for="rememberMe">Remember Me</label>
+    <label class="custom-control-label" for="rememberMe">{{"auth.rememberMe" | translate }}</label>
     </div>
     <a href="javascript:;"
     (click)="onToggleForgotPassForm(true)"
-     class="btn-link">Forgot Password?</a>
+     class="btn-link">{{"auth.forgotPassword" | translate }}</a>
   </div>
   <!-- <div class="form-group mt-5">
     <button
@@ -38,7 +38,7 @@
     class="btn btn-block btn-lg"
     [ngClass]="{'btn-theme-blue': router?.url.includes('employer'), 'btn-theme-orange':router?.url.includes('agency'), 'btn-theme-green':router?.url.includes('user') }"
     type="submit" [disabled]="loginForm.invalid">
-      <span [hidden]="isLoading">Submit</span>
+      <span [hidden]="isLoading">{{"shared.submit" | translate }}</span>
       <span [hidden]="!isLoading">
         <i class="fa fa-spinner" aria-hidden="true"></i>
       </span>
@@ -46,14 +46,15 @@
   </div>
   <!-- </div> -->
   <p class="form-group text-center">
-    Don't have an account?
+    
+	{{"auth.haveAccount" | translate }}
     <a
     (click)="onToggleRegisterForm(true)"
     href="javascript:;"
     data-toggle="modal"
     data-target="#jobseeker-registration"
     class="btn-link">
-      Register
+      {{"auth.register" | translate }}
     </a>
    </p>
   </form>
