--- a/frontend/src/app/shared/component/modal/register-form/register-form.component.html
+++ b/frontend/src/app/shared/component/modal/register-form/register-form.component.html
@@ -10,7 +10,7 @@
   <div class="modal-body">
     <form method="post" [formGroup]="registerForm" (ngSubmit)="register()">
       <div class="form-group">
-        <label>First Name</label>
+        <label>{{"shared.firstName" | translate }}</label>
         <div appMarkAsterisk class="input-with-icon">
           <input autocomplete="disabled" type="text" class="form-control" [placeholder]="'First Name'" formControlName="firstName">
           <i class="fas fa-user-alt"></i>
@@ -18,7 +18,7 @@
         <app-control-messages [control]="f['firstName']"></app-control-messages>
       </div>
       <div class="form-group">
-        <label>Last Name</label>
+        <label>{{"shared.lastName" | translate }}</label>
         <div appMarkAsterisk class="input-with-icon">
           <input autocomplete="disabled" type="text" class="form-control" [placeholder]="'Last Name'" formControlName="lastName">
           <i class="fas fa-user-alt"></i>
@@ -26,7 +26,7 @@
         <app-control-messages [control]="f['lastName']"></app-control-messages>
       </div>
       <div class="form-group">
-        <label>Email</label>
+        <label>{{"auth.email" | translate }}</label>
         <div appMarkAsterisk class="input-with-icon">
           <input type="text" autocomplete="disabled" style="text-transform: lowercase;" class="form-control" [placeholder]="'Email Address'" formControlName="email">
           <i class="fas fa-envelope"></i>
@@ -37,7 +37,7 @@
         <app-control-messages [control]="f['email']"></app-control-messages>
       </div>
       <div class="form-group" *ngIf="router?.url.includes('employer') || router?.url.includes('agency')">
-        <label>Company Name </label>
+        <label>{{"shared.companyName" | translate }}</label>
         <div appMarkAsterisk class="input-with-icon">
           <input autocomplete="disabled" type="text" class="form-control" [placeholder]="'Company Name'" formControlName="companyName">
           <i class="fas fa-industry"></i>
@@ -45,7 +45,7 @@
         <app-control-messages [control]="f['companyName']"></app-control-messages>
       </div>
       <div class="form-group">
-        <label>Password </label>
+        <label>{{"auth.password" | translate }} </label>
         <div appMarkAsterisk class="input-with-icon input-group">
           <input appPassword type="password" class="form-control" [placeholder]="'Password'" formControlName="password">
           <i class="fas fa-key"></i>
@@ -55,14 +55,14 @@
       <div class="form-group">
         <div class="custom-control custom-checkbox">
         <input autocomplete="disabled" type="checkbox" class="custom-control-input" id="termsService" formControlName="isAgreed">
-        <label class="custom-control-label" for="termsService">Terms of Service and Privacy Policy <a href="#">View</a></label>
+        <label class="custom-control-label" for="termsService">{{"auth.terms" | translate }} <a href="#">View</a></label>
         </div>
       </div>
       <div
        class="form-group mt-5">
         <button type="submit" [ngClass]="{'btn-theme-blue': router?.url.includes('employer'), 'btn-theme-orange':router?.url.includes('agency'), 'btn-theme-green':router?.url.includes('user') }"
          class="btn btn-block btn-lg" [disabled]="(registerForm.invalid || (!registerForm?.value?.isAgreed))">
-         <span [hidden]="isLoading">Submit</span>
+         <span [hidden]="isLoading">{{"shared.submit" | translate }}</span>
          <span [hidden]="!isLoading">
            <i class="fa fa-spinner" aria-hidden="true"></i>
          </span>
