--- a/admin/src/assets/css/style.css
+++ b/admin/src/assets/css/style.css
@@ -14,6 +14,15 @@ body {
     letter-spacing: 0.25px;
     background: #edeef3;
 }
+.iti--allow-dropdown {
+    width: 350px;
+}
+.required-asterisk {
+    color: red;
+    font-weight: bold;
+    margin-left: 3px;
+    font-size: 1.2em;
+}
 h1,h2,h3,h4,h5,h6 {
   color: #111;
 }
